# uzon-python

./: .gitignore  README.md  pyproject.toml
src/uzon/: __init__.py  _format.py  ast_nodes.py  errors.py  generator.py  lexer.py  parser.py  scope.py  tokens.py  types.py  val.py
src/uzon/evaluator/: __init__.py  _constants.py  _control.py  _dependencies.py  _functions.py  _operators.py  _stdlib.py  _structs.py  _type_annotation.py  _type_checks.py  _type_conversion.py  _types.py  core.py
tests/: __init__.py  test_api.py  test_conformance.py  test_evaluator.py  test_generator.py  test_lexer.py  test_parser.py  test_val.py
